--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: python
+
 python:
   - "3.5.2"
 
 install:
   - pip install -U selenium
   - pip install plac
+
+script: 
+  - pytest main.py
